k8s/kustomization/bases/strapi/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  labels:
    app: strapi
spec:
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      restartPolicy: Always
      volumes:
      - name: strapi-pv
        persistentVolumeClaim:
          claimName: strapi-data-pvc
      containers:
        - name: strapi
          image: registry.gitlab.com/farcasmihai91/starter/static-cms:855d392b
          imagePullPolicy: Always
          volumeMounts:
            - name: strapi-pv
              mountPath: /srv/app
          resources:
            limits:
              cpu: "500m"
              memory: "800Mi"
